--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,5 @@
 <style>body{overflow:hidden}@-webkit-keyframes fa-spin{0%{-webkit-transform:rotate(0deg);transform:rotate(0)}to{-webkit-transform:rotate(359deg);transform:rotate(359deg)}}</style><link rel="stylesheet" href="styles-FT35P632.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles-FT35P632.css"></noscript></head>
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-7CGTOI24.js"><script src="main-3KSDZIMJ.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-7CGTOI24.js"><script src="main-7WW7KE4V.js" type="module"></script></body>
 </html>
